--- a/PR.css
+++ b/PR.css
@@ -3,13 +3,37 @@ html {
   height: 100%;
   width: 100%;
   margin: 0;
-  font-family: "Arial", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Micro 5", sans-serif;
   background-color: #f0dede;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: rgb(237, 232, 232);
 }
+
+.container {
+  text-align: center;
+}
+
+.heading-wrapper {
+  margin-bottom: 20px;
+}
+
+.title {
+  font-size: 2.5em;
+}
+
+.subtitle {
+  font-size: 1.5em;
+}
+
+.skull {
+  font-size: 1.2em;
+}
+
 
 body {
   margin: 0;
@@ -94,7 +118,7 @@ body {
   20%,
   24%,
   55% {
-    text-shadow: navajowhite;
+    text-shadow: rgb(47, 15, 161);
   }
 }
 body {
